--- a/Image.html
+++ b/Image.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Tag</title>
+    <title>Image Tag </title>
 </head>
 <body>
     
     <img src="https://im.indiatimes.in/content/2023/Sep/Krishna-Janmashtami--2023-date1_64f879808cb08.png" alt="Supreme Lord Krishna" height="500px" 500px="">
    <br>
     <img src="krishna.jpg" alt="Lord Krishna" heigh="500" width="500px"> 
+
+    <p>Hare Krishna <br> Hare Krishna Krishna <br> 
+    Krishna Hare Hare
+Hare Rama <br>  Hare Rama Rama<br>  Rama Hare Hare</p> 
 
 
 </body>
